<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/event_creator_id"
        tools:context=".event.creator.EventCreatorActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/event_creator_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.ConnectOut.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/event_creator_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.ConnectOut.PopupOverlay"
                app:navigationIcon="@drawable/back_arrow_image">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_creator_content"
            android:layout_above="@+id/event_creator_save_button"
            android:layout_below="@id/event_creator_appbar">


        <EditText
                android:id="@+id/event_creator_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                android:hint="Event title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingVertical="20dp" />

        <EditText
                android:id="@+id/event_creator_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_creator_title"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingVertical="20dp"
                android:ems="15"
                android:hint="Event description"
                android:inputType="text"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/event_creator_select_time"
                android:layout_below="@+id/event_creator_description">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_date"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="dd-mm-yyyy" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT DATE"
                    android:id="@+id/btn_date"
                    android:layout_alignBottom="@+id/in_date"
                    android:layout_toRightOf="@+id/in_date"
                    android:layout_toEndOf="@+id/in_date"
                    android:layout_marginLeft="50dp" />

            <EditText
                    android:id="@+id/in_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/in_date"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:hint="hh:mm" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT TIME"
                    android:id="@+id/btn_time"
                    android:layout_below="@+id/btn_date"
                    android:layout_alignLeft="@+id/btn_date"
                    android:layout_alignStart="@+id/btn_date" />

        </RelativeLayout>

        <TextView
                android:id="@+id/selectImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Event image"
                android:layout_below="@+id/event_creator_select_time"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:paddingVertical="12dp" />

        <FrameLayout
                android:id="@+id/event_creator_selectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add location"
                android:minHeight="50dp"
                android:layout_below="@+id/event_creator_select_time"
                android:layout_toRightOf="@id/selectImageLabel"
                android:layout_marginStart="6dp"
                android:layout_alignParentEnd="true" />

        <RelativeLayout
                android:id="@+id/event_creator_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                android:layout_below="@+id/event_creator_selectImage"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin" />


    </RelativeLayout>


    <Button
            android:id="@+id/event_creator_save_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />


</RelativeLayout>