<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/events_activity_id"
        tools:context=".event.nearbyEvents.EventsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/events_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        android:theme="@style/Theme.ConnectOut.AppBarOverlay">

        <Button
            android:id="@+id/events_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/filter"
            android:background="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
            android:id="@+id/events_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/events_toolbar"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/fab_margin"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/list_switch_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/list"
                android:textAlignment="center"
                android:checked="false"
                android:textSize="20sp"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_left_selector" />

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/map_switch_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/map"
                android:checked="true"
                android:textAlignment="center"
                android:textSize="20sp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_right_selector"
                android:layout_weight="1" />

    </RadioGroup>


    <FrameLayout
            android:id="@+id/nearby_events_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/events_task_bar"
            android:layout_below="@+id/events_switch"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin" />

    <FrameLayout
            android:id="@+id/events_task_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"

            />

</RelativeLayout>